--- a/WinFormTest/App.config
+++ b/WinFormTest/App.config
@@ -1,7 +1,7 @@
 ﻿          <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="connStr" connectionString="Data Source=.;Initial Catalog=account;Persist Security Info=True;User ID=sa;Password=asd51914501"
+    <add name="connStr" connectionString="Data Source=.;Initial Catalog=account;Persist Security Info=True;User ID=sa;Password=1234"
          providerName="System.data.SqlClient" />
   </connectionStrings>
 </configuration>
